--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
-  <body data-mode="dark">
+  <body data-mode="dark" class="bg-slate-900">
     <app-root></app-root>
   </body>
 </html>
